--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,3 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
-exports_files(["tsconfig.json"])
+exports_files([
+    "tsconfig.json",
+    "package.json",
+])
