--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,3 @@
 package(default_visibility = ["//visibility:public"])
 
-exports_files([
-    "tsconfig.json",
-    "package.json",
-])
+exports_files(["tsconfig.json"])
